# opencl-triangulo

./: .gitignore  CMakeLists.txt  LICENSE
src/: hello_triangle.cl  main.cpp
